# crba-etl

./: .gitattributes  .gitignore  .python-version  CONTRIBUTION.md  README.md  pyproject.toml  soure_filter.sql
ai_browser/: browser.py  config_model.py  example_script.py  output_models.py
ai_browser/config.example/: config.yaml
ai_browser/utils/: config_loading.py
docs/: column_metadata_dictionary_of_final_crba_file.xlsx  indicator_dictionary.xlsx  source_definitions.md
etl/: __main__.py  conf.py  run.py
etl/methology/: __init__.py  column_mapping.py  country.py  indicator.py  value_mapping.py  value_mapping_sdmx_encoding.py  value_type.py
etl/resources/: all_countrynames_list.json  category_codes.json  crba_country_list.json  index_codes.json  indicator.json  indicator_definitions.json  issue_codes.json  source_definitions.json  value_type.json
etl/source_adapter/: __init__.py  abstract.py  crin.py  csv.py  cwd.py  eiti.py  excel.py  icrc.py  idmc.py  ilo.py  inform.py  json.py  kids_right_index.py  manual.py  nrgi.py  un.py  who.py  worldbank.py  wpa.py
etl/transformation/: cleanse.py  decorators.py  scaler.py
scripts/: build_doc.py  decompose_indicator_dict.ipynb  dummy.ipynb  filter_unknown_issus.py  know_issus.csv  renaming_staging_files.py  un_po.csv  un_pop.json
tests/tests_indicators/: test_crin.py
validation/: aggregated_scores.xlsx  comparison_of_final_files.html  comparison_of_final_files.ipynb  country_aggregate_scores.csv  run_sdmx_indicator_check.py
validation/comparison_of_final_files/: compare_two_final_csvs.py
(+202 files in other folders)
