[tool.poetry]
name = "crba-project"
version = "0.1.0"
description = "Project for developing a Python Programm to create the data Foundation for the CRBA"
authors = ["Lasse Karls <l_karls@outlook.com>"]
readme = "README.md"
repository = ""
packages = [
    { include = "etl" },
    { include = "validation" },
]

[tool.poetry.dependencies]
python = ">=3.9.6,<3.11"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
requests = "^2.28.1"
numpy = "^1.23.5"
nltk = "^3.7"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
xlrd = "^2.0.1"
selenium = "^4.6.1"
webdriver-manager = "^3.8.5"
requests-cache = "^0.9.7"
great-expectations = "^0.15.41"
google-api-python-client = "^2.73.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
appdirs = "^1.4.4"
nbformat = "^5.8.0"
tqdm = "^4.64.0"
requests-mock = "^1.10.0"
tabulate = "^0.9.0"
pandasdmx = "^1.10.0"
xlsxwriter = "^3.1.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
pandasdmx = "^1.9.0"
logging-tree = "^1.9"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
